tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@break_in_for_else.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/break_in_for_else.txt
---
error: break can only be used in a for loop
 --> break_in_for_else.txt:1:31
  |
1 | {% for x in [] %}a{% else %}{% break %}{% endfor %}
  |                                ^^^^^
